Increase Max PermGen Size
Clean build was failing with OutOfMemoryError - PermGen space